# data-analyst-crewAI

./: LangChainPandasAgent.ipynb  README.md  crewAI_DA_proj-colabNB.ipynb
dataanalyst-agent-crewAI/: README.md  chd-metadata.txt  config.yaml  final_analysis.md  pyproject.toml
dataanalyst-agent-crewAI/src/newproj/: crew.py  main.py
dataanalyst-agent-crewAI/src/newproj/config/eda/: agents.yaml  tasks.yaml
dataanalyst-agent-crewAI/src/newproj/config/quest/: agents.yaml  tasks.yaml
dataanalyst-agent-crewAI/src/newproj/tools/: custom_tool.py
