[tool.poetry]
name = "newproj"
version = "0.1.0"
description = "newproj using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.65.2,<1.0.0" }
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
statsmodels = "^0.14.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[tool.poetry.scripts]
newproj = "newproj.main:run"
run_crew = "newproj.main:run"
train = "newproj.main:train"
replay = "newproj.main:replay"
test = "newproj.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
